Add USE_MULTIARCH += lib.
This is needed to ensure pkgconfig paths are searched correctly.

--- a/devel/pkg-config/Makefile
+++ b/devel/pkg-config/Makefile
@@ -13,7 +13,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
 
 USE_LIBTOOL=		yes
-USE_MULTIARCH=		bin
+USE_MULTIARCH=		bin lib
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--with-internal-glib
 
