--- a/lang/perl5/Makefile
+++ b/lang/perl5/Makefile
@@ -275,7 +275,7 @@ SUBST_VARS.policysh+=	LOCLIBRPATHFLAGS
 SUBST_CLASSES+=		rm
 SUBST_STAGE.rm=		pre-install
 SUBST_FILES.rm=		lib/Config_heavy.pl
-SUBST_SED.rm=	-e "s!^rm_try='/.*/\\.tools/bin/rm -f!rm_try='/bin/rm -f!"
+SUBST_SED.rm=	-e "s!^rm_try='/.*/\\.tools/bin${BINARCHSUFFIX}/rm -f!rm_try='/bin/rm -f!"
 
 # Replace our perl as the interpreter
 REPLACE_PERL+=		lib/File/DosGlob.pm
