Fix gcc runtime path in multiarch case.
The default is to use MACHINE_GNU_ARCH, however when running with
multiarch this will change depending upon ABI, and we can no longer find
the runtime libraries.

--- a/lang/gcc47-libs/Makefile
+++ b/lang/gcc47-libs/Makefile
@@ -36,7 +36,10 @@ GCC_SUBPREFIX=		${GCC_PKGNAME}
 GCC_PREFIX=		${GCC_PKG_PREFIX}/${GCC_SUBPREFIX}
 
 .if defined(_PKGSRC_BARRIER) && exists(${GCC_PREFIX}/bin/gcc)
-TARGET_TRIPLE!=		${GCC_PREFIX}/bin/gcc -dumpmachine
+# For multiarch we need a consistent directory which does not change based
+# upon ABI.
+TARGET_TRIPLE=		runtime
+#TARGET_TRIPLE!=	${GCC_PREFIX}/bin/gcc -dumpmachine
 .endif
 
 .include "../../mk/bsd.prefs.mk"
